--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "script": "webpack",
+    "webpack": "webpack",
     "serve": "browser-sync start -c bs-config.js",
     "clean": "rm -rf dist"
   },
