Gulp webpack task created

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.5",
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.8",
     "webpack": "^1.14.0"
   }
 }
